--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "openai": "^4.8.0",
     "postcss": "8.4.29",
     "prisma": "^5.2.0",
     "react": "18.2.0",
