--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.276.0",
-    "next": "13.4.19",
+    "next": "^13.5.2",
     "next-auth": "^4.23.1",
     "openai": "^4.8.0",
     "postcss": "8.4.29",
