--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "ai": "^2.2.15",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
@@ -31,7 +32,7 @@
     "lucide-react": "^0.276.0",
     "next": "^13.5.2",
     "next-auth": "^4.23.1",
-    "openai": "^4.8.0",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.29",
     "prisma": "^5.2.0",
     "react": "18.2.0",
