--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.4",
     "@hookform/resolvers": "^3.3.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -31,7 +31,6 @@
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.276.0",
     "next": "^13.5.2",
-    "next-auth": "^4.23.1",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.29",
     "prisma": "^5.2.0",
