--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.0",
+    "react-uid": "^2.3.3",
+    "replicate": "^0.20.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
