--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@stripe/stripe-js": "^2.1.8",
     "ai": "^2.2.15",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
@@ -35,6 +36,7 @@
     "react-markdown": "^9.0.0",
     "react-uid": "^2.3.3",
     "replicate": "^0.20.1",
+    "stripe": "^13.11.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
