--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.25.4",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.2.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
